# sonarcloud-code-smell-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/sonar_jacoco_analyzer/: __init__.py  api.py  cli.py  commit_cli.py  commit_config.py  commit_generator.py  commit_splitter.py  conventional_commit.py  git_operations.py  github_client.py  gitlab_client.py  jacoco.py
tests/: __init__.py  test_commit_generator.py  test_commit_splitter.py  test_conventional_commit.py  test_git_operations.py  test_github_client.py  test_gitlab_client.py
